--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
       <div class="cat-display">
         <div id="click-score">
           <p>Number of clicks are:</p>
-          <p id=score1>0</p>
+          <p id=score>0</p>
         </div>
         <div id="cat-image">
-          <p id="picture">choose a cat</p>
+          <img id="picture" src="%data%" alt="cat">
         </div>
         <div class="cat-name">
 
