second requirments works

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <p id=score>0</p>
         </div>
         <div id="cat-image">
-          <img id="picture" src="%data%" alt="cat">
+          <img id="picture" class="image" src="%data%" alt="cat">
         </div>
         <div class="cat-name">
 
