--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
 
     </div>
     <script type="text/javascript" src="js/jquery-3.1.1.slim.js"></script>
-    <script src=js/main.js></script>
+    <script src=js/mvo.js></script>
   </body>
 </html>
