After implementation of cat premium requirement

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <img id="picture" class="image" src="%data%" alt="cat">
         </div>
         <div class="cat-name">
-
+          <p id="name">name of cat</p>
         </div>
       </div>
 
