final cat-clicker

--- a/index.html
+++ b/index.html
@@ -23,7 +23,14 @@
           <p id="name">name of cat</p>
         </div>
       </div>
-
+      <div id="admin-container">
+        <button type="button" id="admin" class="adminbtn" name="adminbutton">Admin</button>
+        <div class="admin-panel">
+          <input type="text" id="cat" name="name"><br>
+          <button type="button" id="save" class="adminpanelbtn" name="save">save</button>
+          <button type="button" id="cancel" class="adminpanelbtn" name="cancel">cancel</button>
+        </div>
+      </div>
     </div>
     <script type="text/javascript" src="js/jquery-3.1.1.slim.js"></script>
     <script src=js/mvo.js></script>
